--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   get_it: ^7.6.7
   google_fonts: ^6.1.0
+  intl: ^0.19.0
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
 
