--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  date_picker_timeline: ^1.2.6
   flutter:
     sdk: flutter
   get_it: ^7.6.7
