--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   date_picker_timeline: ^1.2.6
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.9.3
   get_it: ^7.6.7
   google_fonts: ^6.1.0
   intl: ^0.19.0
@@ -39,7 +40,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
